versions/v0.12.x/embedded/guides/encrypted-indexes/list-indexes.mdx
---
title: "List Encrypted Indexes"
sidebarTitle: "List Indexes"
mode: "wide"
---

To see which existing encrypted indexes are available to your CyborgDB client, you can use `list_indexes`:

<CodeGroup>
```python Python icon="python"
import cyborgdb_core as cyborgdb
# or import cyborgdb_lite as cyborgdb

index_location = cyborgdb.DBConfig(location='redis', connection_string="redis://localhost")
config_location = cyborgdb.DBConfig(location='redis', connection_string="redis://localhost")
api_key = "your_api_key_here"  # Replace with your actual API key

client = cyborgdb.Client(
    api_key=api_key,
    index_location=index_location,
    config_location=config_location
)

indexes = client.list_indexes()

print(indexes)
# Example output:
# ["index_one", "index_two", "index_three"]
```

```cpp C++ icon="brackets-curly"
#include "cyborgdb_core/client.hpp"

// Set index location and config location beforehand...

// Get your API key
std::string api_key = "your_api_key_here";  // Replace with your actual API key

cyborg::Client client(api_key, index_location, config_location);

auto indexes = client.ListIndexes();

// Print the indexes
for (const auto& index_name : indexes) {
    std::cout << index_name << std::endl;
}
```
</CodeGroup>

<Note>`list_indexes` is not available for `memory` locations.</Note>

## API Reference

For more information on listing encrypted indexes, refer to the API reference:

<CardGroup cols={2}>
    <Card title="Python API Reference" href="../../python/client/list-indexes" icon="python">
        API reference for `list_indexes()` in Python
    </Card>
    <Card title="C++ API Reference" href="../../cpp/client/list-indexes" icon="brackets-curly">
        API reference for `ListIndexes()` in C++
    </Card>
</CardGroup>